@@ -187,14 +187,8 @@ handle_option(int c, const char *arg)
 #ifndef NCMPC_MINI
 		printf("configuration files:\n"
 		       " %s\n"
-#ifndef _WIN32
-		       " %s\n"
-#endif
 		       " %s\n\n",
 		       GetUserConfigPath().c_str(),
-#ifndef _WIN32
-		       GetHomeConfigPath().c_str(),
-#endif
 		       GetSystemConfigPath().c_str());
 
 		if (!StringIsEqual("translator-credits", _("translator-credits")))
