@@ -1,4 +1,5 @@
 ncmpc 0.48 - not yet released
+* drop support for ~/.ncmpc/; using only ~/.config/ncmpc/ (XDG)
 * improve scroll-offset handling
 * experimental table layout
 
